Adjusted tooltip to a more reasonable parameter and fixed some spacing for mobile user comfort

--- a/public/stylesheets/talent.css
+++ b/public/stylesheets/talent.css
@@ -125,6 +125,7 @@
         text-align: center;
         border-radius: 5px;
         border: 2px solid #969696;
+        pointer-events: none;
     }
 
     .tooltip h1{
@@ -155,7 +156,6 @@
         color: #ecb939;
         padding: 10px;
         font-size: 16px;
-        margin-right: 25px;
         background-color: rgba(14, 26, 64, .8);
         border: 2px solid #969696;
         box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
